--- a/_modules/matmul/matmult.html
+++ b/_modules/matmul/matmult.html
@@ -76,7 +76,7 @@
 
 <span class="sd">    Parameters:</span>
 <span class="sd">    -----------</span>
-<span class="sd">        A : nd.array</span>
+<span class="sd">        A : np.ndarray</span>
 <span class="sd">            A 2D NumPy array of float64. Must be passed by rank 0</span>
 <span class="sd">            processor. The other processors may pass a null object</span>
 <span class="sd">            (&quot;None&quot;).</span>
